style(escrow__xl): fix white space
This commit is to resolve rendering issue in the escrow social block.

The change will ensure that there will be enough space on top and bottom
sides of the block thereby rendering well on xl devices and window or
screen sizes.

--- a/style.css
+++ b/style.css
@@ -3072,7 +3072,7 @@ vertical-align: top;
   align-items: center;
   justify-content: center;
   gap: 3rem;
-  padding-top: 1.5%;
+  padding: 4% 0;
 }
 
 .escrow__social-box {
